--- a/views/filesharing.ejs
+++ b/views/filesharing.ejs
@@ -51,7 +51,7 @@
                 Click Link to Download File !
             </div>
             <div class="file-link">
-                 <a href="https://blogweb325.onrender.com/upload/<%= locals.fileLink %>">
+                 <a href="https://blogweb325.onrender.com/<%= locals.fileLink %>">
                     <%= locals.fileLink %>
                 </a> </center>
                 
