--- a/views/edituser.ejs
+++ b/views/edituser.ejs
@@ -25,7 +25,7 @@
                             <input type="email" name="email"  value="<%=users.email%>" class="form-control form-control-lg" placeholder="Enter email" required>
                         </div> <div class="mb-3">
                             <label for="phone">Text</label>
-                            <input type="phone" name="phone"  value="<%=users.phone%>" class="form-control form-control-lg" placeholder="Enter phone" required>
+                            <input type="text" name="phone"  value="<%=users.phone%>" class="form-control form-control-lg" placeholder="Enter phone" required>
                         </div> <div class="mb-3">
                             <label for="image">Select Img</label>
                             <input type="file" name="image" class="form-control " placeholder="Enter Name" required>
