--- a/views/filesharing.ejs
+++ b/views/filesharing.ejs
@@ -16,17 +16,18 @@
     }
 </style>
 
-<body>
+<body><center> 
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav class="navbar"> 
         <div class="logo">
             <img src="https://cdn-icons-png.flaticon.com/512/1037/1037325.png"  alt="Logo">
         </div>
-        <div class="navbar-links">
+         <div class="navbar-links">
             <a href="/">Home</a>
             <a href="/about">About</a>
             <a href="/contact">Contact</a>
-        </div>
+        </div></center>
+       
         
     </nav>
 
