--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
                                                 <p class="card-text"><strong>About:</strong> <%= post.phone %> (Change this with your actual content)</p>
                                                 <a href='/edit/<%= post._id %>' class="btn btn-success me-2">Edit</a>
                                                 <a href="/delete/<%= post._id %>" class="btn btn-danger">Delete</a>
-                                                <a href="/post/<%= post._id %>" class="btn btn-primary">View</a>
+                                                <a href="/view/<%= post._id %>" class="btn btn-primary">View</a>
 
                                                 
                                             </div>
